# TimemAi

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  env_template  install.sh  uninstall.sh
agent_core/: Cargo.toml  build.rs  module_boundary.md
agent_core/examples/: expand_static_prompt.rs
agent_core/src/: audit.rs  capability.rs  capmgr.rs  config_edit.rs  config_report.rs  context.rs  context_policy.rs  data_layout.rs  executor.rs  host.rs  lib.rs  memmgr.rs  notification.rs  profiler.rs  prompt_cache.rs  prompt_components.rs  prompt_render.rs  prompt_spec.rs  provider.rs  provider_config.rs  provider_transport.rs  redaction.rs  retry_policy.rs  runtime_context.rs  self_tool.rs  session_runtime.rs  session_store.rs  session_worker.rs  shell_exec.rs  status_summary.rs  status_view.rs  tool_jobs.rs  tool_repo.rs  work_instructions.rs  workspace.rs
agent_core/src/response_protocol/: json_suite.rs  markdown_suite.rs  mod.rs  xml_suite.rs
agent_core/tests/: core_tests.rs  session_store_tests.rs
agent_core/tests/response_protocol/: xml_suite_tests.rs
agent_core/tests/unit/: audit_tests.rs  capability_tests.rs  capability_tool_capmgr_tests.rs  capability_tool_memmgr_tests.rs  capability_tool_registry_tests.rs  capability_tool_run_bash_tests.rs  capability_tool_self_tool_tests.rs  capability_tool_toolgen_tests.rs  config_edit_tests.rs  config_report_tests.rs  context_policy_tests.rs  context_tests.rs  data_layout_tests.rs  executor_tests.rs  (+24 more)
timem_shell/: Cargo.toml  module_boundary.md
timem_shell/src/: final_answer_renderer.rs  lib.rs  main.rs  observation.rs  profiler.rs  prompt_cache.rs  protocol_adapter.rs  session_runtime.rs  structured_output.rs
timem_web/: Cargo.toml  README.md  build.rs  module_boundary.md
timem_web/src/: main.rs  server.rs
(+90 files in other folders)
