[package]
name = "agent_core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "agent_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
quick-xml = { version = "0.41.0", features = ["serialize"] }
