[package]
name = "timem_shell"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "timem-native-rs"
path = "src/main.rs"

[dependencies]
agent_core = { path = "../agent_core" }
serde_json = "1"
home = "=0.5.9"
unicode-segmentation = "=1.12.0"
unicode-width = "0.1"
libc = "0.2"
reedline = "0.48.0"
crossterm = "0.29"
nu-ansi-term = "0.50"
termimad = "0.34.1"
